server/manifests/test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debug
spec:
  replicas: 1
  selector:
    matchLabels:
      app: debug
  template:
    metadata:
      labels:
        app: debug
    spec: 
      containers:
        - name: hello
          image: nginxdemos/hello:latest
          ports:
            - containerPort: 80
