server/manifests/test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: debug-service
spec:
  type: ClusterIP
  selector:
    app: debug
  ports: 
    - protocol: TCP
      port: 80
      targetPort: 80
